# Stock-Analysis-Bot-agentic-langchain

./: README.md  main.py  pyproject.toml  requirements.txt  streamlit.py
agent_tools/: tools.py
agents/: workflow.py
config/: config.yaml
data_ingestion/: ingestion.py
data_models/: models.py
exception/: exceptions.py
logger/: custom_logger.py
research/: chatbot.ipynb  example.ipynb  research.ipynb
utils/: config_loader.py  model_loader.py
