[project]
name = "tradingbot-agentic-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docx2txt>=0.9",
    "fastapi[all]>=0.115.12",
    "langchain>=0.3.25",
    "langchain-community>=0.3.25",
    "langchain-google-genai>=2.1.5",
    "langchain-groq>=0.3.2",
    "langchain-pinecone>=0.2.8",
    "langchain-tavily>=0.2.1",
    "langgraph>=0.4.8",
    "langgraph-cli[inmem]>=0.3.3",
    "pinecone>=7.0.2",
    "pip>=25.1.1",
    "polygon>=1.2.6",
    "pypdf>=5.6.0",
    "streamlit>=1.45.1",
    "uvicorn>=0.34.3",
]
